--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     width: 350px;
     height: 450px;
     border-radius: 10px;
-    box-shadow: 3px 3px 10px rgb(26, 26, 26), -2px -2px 10px rgb(26, 26, 26);
+    box-shadow: 3px 3px 10px rgb(15, 15, 15), -2px -2px 10px rgb(20, 20, 20);
 }
 
 .art-name {
@@ -82,4 +82,76 @@ body {
     100% {
         transform: translateX(-100%);
     }
-}   
+}
+
+.ctrl {
+    cursor: pointer;
+    background-color: lightblue;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin: 0 15px;
+
+}
+
+.ctrl:active {
+    transform: scale();
+}
+
+i {
+    font-size: 22px;
+}
+
+.none {
+    display: none;
+}
+
+.msc {
+    margin-top: 30px;;
+}
+
+.progress-bar {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+
+.time {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 10px;
+}
+
+.line {
+    width: 100%;
+    height: 5px;
+    background-color: rgb(150, 202, 150);
+    border-radius: 10px;
+    margin-top: 5px;
+    cursor: pointer;
+    position: relative;
+}
+
+.linechild {
+    cursor: pointer;
+    position: absolute;
+    border-radius: 10px;
+    background-color: lightblue;
+    width: 50%;
+    height: 100%;
+    transition: width 0.2s;
+}
+
+.linechild::after {
+    background-color: rgb(100, 149, 237);
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+    top: -2px;
+    right: 0;
+    border-radius: 50%;
+}
